Archive2/72/54e565ee806a91/output
main.cpp:8:1: error: extraneous 'template<>' in declaration of class 'Test'
template <>
^
1 error generated.
